--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,6 @@
         </div>
     </div>
 
-    <a style="font-size: 35px;" href="../Assignment 2/Index.html"> CLICK THIS LINK TO REDIRECT TO ASSIGNENT 2 OF CSS</a>
+    <a style="font-size: 35px;" href="./Assignment 2/Index.html"> CLICK THIS LINK TO REDIRECT TO ASSIGNENT 2 OF CSS</a>
 </body>
 </html>
