my css assignment

--- a/Assignment 6/Index.html
+++ b/Assignment 6/Index.html
@@ -321,7 +321,7 @@
             <p>Terms of Service | Security | Scissor 2023</p>
         </div>
     </footer>
-    <a style="font-size: 35px;" href="../Assignment 1/Index.html"> CLICK THIS LINK TO REDIRECT back  TO ASSIGNENT 1 OF CSS</a>
+    <a style="font-size: 35px;" href="../index.html"> CLICK THIS LINK TO REDIRECT back  TO ASSIGNENT 1 OF CSS</a>
 
 </body>
 </html>
