my css assignment

--- a/Index.html
+++ b/Index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./Index.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="main-container">
+    <section class="main-container">
         <div class="container">
-           <div class="box-one">an otter essay</div>
-           <div class="box-two">Otters have long, slim bodies and relatively short limbs. The most striking anatomical features are the powerful webbed feet used to swim, and theur seal-like abilities holding breath underwater.</div>
+         <h1>My Name Is BOLUWATIFE MOYAKI</h1>
+         <p style="margin-top: 2vh;">ALT/SOE/024/5118</p>
+         <p style="margin-top: 2vh;">this are the links to my Assignment</p>
+         <div class="button-container">
+            <button><a href="./Assignment 1/index.html">Assignment 1</a></button>
+            <button><a href="./Assignment 2/index.html">Assignment 2</a></button>
+            <button><a href="./Assignment 3/index.html">Assignment 3</a></button>
+            <button><a href="./Assignment 4/index.html">Assignment 4</a></button>
+            <button><a href="./Assignment 5/index.html">Assignment 5</a></button>
+            <button><a href="./Assignment 6/index.html">Assignment 6</a></button>
+         </div>
         </div>
-    </div>
-
-    <a style="font-size: 35px;" href="./Assignment 2/Index.html"> CLICK THIS LINK TO REDIRECT TO ASSIGNENT 2 OF CSS</a>
+    </section>
 </body>
 </html>
